--- a/index.html
+++ b/index.html
@@ -47,6 +47,11 @@
             </li>
           </ul>
         </nav>
+        <button type="button" class="mobile-menu-btn">
+          <svg  class="mobile-menu-btn__icon" width="40" height="40">
+            <use href="./images/svg/social.svg#burger-menu-icon"></use>
+          </svg>
+        </button>
         <ul class="header-feedback list">
           <li class="nav-feedback__contacts">
             <a
@@ -81,9 +86,18 @@
           </li>
         </ul>
       </div>
+      <div class="mobile-menu">
+        <div class="container mobile-menu__container">
+          <button class="mobile-menu__close-btn">
+            <svg class="mobile-menu__close-icon" width="18" height="18">
+              <use href="./images/svg/social.svg#close-button"></use>
+            </svg>
+          </button>
+        </div>
+      </div>
     </header>
     <main>
-      <section class="main-section-color">
+      <!-- <section class="main-section-color">
         <div class="main-section__text container">
           <h1 class="main-section__text-type">
             Ефективні рішення для вашого бізнесу
@@ -92,8 +106,8 @@
             Замовити послугу
           </button>
         </div>
-      </section>
-      <section class="our-advantages">
+      </section> -->
+      <!-- <section class="our-advantages">
         <div class="container">
           <h2 class="invisible">Наші Переваги</h2>
           <ul class="main-sabtitle list">
@@ -162,8 +176,8 @@
             </li>
           </ul>
         </div>
-      </section>
-      <section class="our-work">
+      </section> -->
+      <!-- <section class="our-work">
         <div class="container">
           <h2 class="main-text-roboto">Чим ми займаємося</h2>
           <ul class="list work-images">
@@ -199,8 +213,8 @@
             </li>
           </ul>
         </div>
-      </section>
-      <section class="our-team">
+      </section> -->
+      <!-- <section class="our-team">
         <div class="container">
           <h2 class="main-text-roboto">Наша команда</h2>
           <ul class="list employees">
@@ -442,8 +456,8 @@
             </li>
           </ul>
         </div>
-      </section>
-      <section class="company">
+      </section> -->
+      <!-- <section class="company"> 
         <div class="container">
           <h2 class="main-text-roboto">Постійні клієнти</h2>
 
@@ -492,10 +506,10 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
     </main>
 
-    <footer>
+    <!-- <footer>
       <div class="footer-position container">
         <div class="footer-address-position">
           <a class="footer-logo logo" href="./index.html" lang="en">
@@ -598,7 +612,7 @@
           </form>
         </div>
       </div>
-    </footer>
+    </footer> -->
     <div class="backdrop is-hidden" data-modal>
       <div class="modal-window">
         <button type="button" class="close-button" data-modal-close>
