--- a/index.html
+++ b/index.html
@@ -93,36 +93,36 @@
               <use href="./images/svg/social.svg#close-button"></use>
             </svg>
           </button>
-          <ul class="mobile-menu_nav">
-            <li class="mobile-menu__nav-list">
+          <ul class="mobile-menu_nav mobile-menu_nav-margin">
+            <li class="mobile-menu__nav-list mobile-menu__nav-list-links">
               <a href="" class="mobile-menu_nav-list-link mobile-menu_nav-list-link-main">Студія</a>
             </li>
-            <li class="mobile-menu__nav-list">
-              <a href="" class="mobile-menu_nav-list-link mobile-menu_nav-list-link-main">Портфоліо</a>
+            <li class="mobile-menu__nav-list mobile-menu__nav-list-links">
+              <a href="/portfolio.html" class="mobile-menu_nav-list-link mobile-menu_nav-list-link-main">Портфоліо</a>
             </li>
-            <li class="mobile-menu__nav-list">
+            <li class="mobile-menu__nav-list mobile-menu__nav-list-links">
               <a href="" class="mobile-menu_nav-list-link mobile-menu_nav-list-link-main">Контакти</a>
             </li>
           </ul>
-          <ul class="mobile-menu_nav">
-            <li class="mobile-menu__nav-list">
+          <ul class="mobile-menu_nav mobile-menu_nav-link-margin">
+            <li class="mobile-menu__nav-list mobile-menu__nav-list-margin">
               <a href="tel:+380961111111" class="mobile-menu_nav-list-link mobile-menu_nav-list-link-num">+38 096 111 11 11</a>
             </li>
-            <li class="mobile-menu__nav-list">
+            <li class="mobile-menu__nav-list mobile-menu__nav-list-margin">
               <a href="mailto:info@devstudio.com" class="mobile-menu_nav-list-link mobile-menu_nav-list-link-mail">info@devstudio.com</a>
             </li>
           </ul>
           <ul class="mobile-menu_nav mobile-menu_nav-pos">
-            <li class="mobile-menu__nav-list">
+            <li class="mobile-menu__nav-list mobile-menu__nav-list-border">
               <a href="" class="mobile-menu_nav-list-link mobile-menu_nav-list-link-social">Instagramm</a>
             </li>
-            <li class="mobile-menu__nav-list">
+            <li class="mobile-menu__nav-list mobile-menu__nav-list-border">
               <a href="" class="mobile-menu_nav-list-link mobile-menu_nav-list-link-social">Twitter</a>
             </li>
-            <li class="mobile-menu__nav-list">
+            <li class="mobile-menu__nav-list mobile-menu__nav-list-border">
               <a href="" class="mobile-menu_nav-list-link mobile-menu_nav-list-link-social">Facebook</a>
             </li>
-            <li class="mobile-menu__nav-list">
+            <li class="mobile-menu__nav-list mobile-menu__nav-list-border">
               <a href="" class="mobile-menu_nav-list-link mobile-menu_nav-list-link-social">Linkedin</a>
             </li>
           </ul>
