--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
       </div>
     </header>
     <main>
-      <!-- <section class="main-section-color">
+      <section class="main-section-color">
         <div class="main-section__text container">
           <h1 class="main-section__text-type">
             Ефективні рішення для вашого бізнесу
@@ -139,7 +139,7 @@
             Замовити послугу
           </button>
         </div>
-      </section> -->
+      </section>
       <!-- <section class="our-advantages">
         <div class="container">
           <h2 class="invisible">Наші Переваги</h2>
