--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
           </button>
         </div>
       </section>
-      <!-- <section class="our-advantages">
+      <section class="our-advantages">
         <div class="container">
           <h2 class="invisible">Наші Переваги</h2>
           <ul class="main-sabtitle list">
@@ -209,7 +209,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
       <!-- <section class="our-work">
         <div class="container">
           <h2 class="main-text-roboto">Чим ми займаємося</h2>
