--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
           </ul>
         </div>
       </section>
-      <!-- <section class="our-work">
+      <section class="our-work">
         <div class="container">
           <h2 class="main-text-roboto">Чим ми займаємося</h2>
           <ul class="list work-images">
@@ -246,8 +246,8 @@
             </li>
           </ul>
         </div>
-      </section> -->
-      <!-- <section class="our-team">
+      </section>
+      <section class="our-team">
         <div class="container">
           <h2 class="main-text-roboto">Наша команда</h2>
           <ul class="list employees">
@@ -489,7 +489,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
       <!-- <section class="company"> 
         <div class="container">
           <h2 class="main-text-roboto">Постійні клієнти</h2>
