--- a/index.html
+++ b/index.html
@@ -312,6 +312,7 @@
             </li>
             <li class="employees__card">
               <img
+              class="employees__card-pictures"
                 src="images/team/repinaolga.jpg"
                 class="pictures"
                 alt="Ольга Рєпіна"
@@ -371,6 +372,7 @@
             </li>
             <li class="employees__card">
               <img
+              class="employees__card-pictures"
                 src="images/team/mikola.jpg"
                 class="pictures"
                 alt="Микола Тарасов"
@@ -430,6 +432,7 @@
             </li>
             <li class="employees__card">
               <img
+              class="employees__card-pictures"
                 src="images/team/michael.jpg"
                 class="pictures"
                 alt="Михайло Єрмаков"
