--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
           </ul>
         </div>
       </section>
-      <!-- <section class="company"> 
+      <section class="company"> 
         <div class="container">
           <h2 class="main-text-roboto">Постійні клієнти</h2>
 
@@ -542,7 +542,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
     </main>
 
     <!-- <footer>
