--- a/index.html
+++ b/index.html
@@ -545,7 +545,7 @@
       </section>
     </main>
 
-    <!-- <footer>
+    <footer>
       <div class="footer-position container">
         <div class="footer-address-position">
           <a class="footer-logo logo" href="./index.html" lang="en">
@@ -625,7 +625,7 @@
           </ul>
         </div>
         <div>
-          <h2 class="text feedback-footer-text">Підпишіться на розсилку</h2>
+          <h2 class="feedback-footer-text">Підпишіться на розсилку</h2>
           <form class="form-flex">
             <span>
               <input
@@ -648,7 +648,7 @@
           </form>
         </div>
       </div>
-    </footer> -->
+    </footer>
     <div class="backdrop is-hidden" data-modal>
       <div class="modal-window">
         <button type="button" class="close-button" data-modal-close>
