--- a/portfolio.html
+++ b/portfolio.html
@@ -48,6 +48,11 @@
             </li>
           </ul>
         </nav>
+        <button type="button" class="mobile-menu-btn" data-menu-open>
+          <svg  class="mobile-menu-btn__icon" width="40" height="40">
+            <use href="./images/svg/social.svg#burger-menu-icon"></use>
+          </svg>
+        </button>
         <ul class="header-feedback list">
           <li class="nav-feedback__contacts">
             <a
@@ -81,6 +86,48 @@
             </a>
           </li>
         </ul>
+      </div>
+      <div class="mobile-menu" data-menu>
+        <div class="container mobile-menu__container">
+          <button class="mobile-menu__close-btn " data-menu-close>
+            <svg class="mobile-menu__close-icon" width="18" height="18">
+              <use href="./images/svg/social.svg#close-button"></use>
+            </svg>
+          </button>
+          <ul class="mobile-menu_nav mobile-menu_nav-margin">
+            <li class="mobile-menu__nav-list mobile-menu__nav-list-links">
+              <a href="./index.html" class="mobile-menu_nav-list-link mobile-menu_nav-list-link-main">Студія</a>
+            </li>
+            <li class="mobile-menu__nav-list mobile-menu__nav-list-links">
+              <a href="/portfolio.html" class="mobile-menu_nav-list-link mobile-menu_nav-list-link-main">Портфоліо</a>
+            </li>
+            <li class="mobile-menu__nav-list mobile-menu__nav-list-links">
+              <a href="" class="mobile-menu_nav-list-link mobile-menu_nav-list-link-main">Контакти</a>
+            </li>
+          </ul>
+          <ul class="mobile-menu_nav mobile-menu_nav-link-margin">
+            <li class="mobile-menu__nav-list mobile-menu__nav-list-margin">
+              <a href="tel:+380961111111" class="mobile-menu_nav-list-link mobile-menu_nav-list-link-num">+38 096 111 11 11</a>
+            </li>
+            <li class="mobile-menu__nav-list mobile-menu__nav-list-margin">
+              <a href="mailto:info@devstudio.com" class="mobile-menu_nav-list-link mobile-menu_nav-list-link-mail">info@devstudio.com</a>
+            </li>
+          </ul>
+          <ul class="mobile-menu_nav mobile-menu_nav-pos">
+            <li class="mobile-menu__nav-list mobile-menu__nav-list-border">
+              <a href="" class="mobile-menu_nav-list-link mobile-menu_nav-list-link-social">Instagramm</a>
+            </li>
+            <li class="mobile-menu__nav-list mobile-menu__nav-list-border">
+              <a href="" class="mobile-menu_nav-list-link mobile-menu_nav-list-link-social">Twitter</a>
+            </li>
+            <li class="mobile-menu__nav-list mobile-menu__nav-list-border">
+              <a href="" class="mobile-menu_nav-list-link mobile-menu_nav-list-link-social">Facebook</a>
+            </li>
+            <li class="mobile-menu__nav-list mobile-menu__nav-list-border">
+              <a href="" class="mobile-menu_nav-list-link mobile-menu_nav-list-link-social">Linkedin</a>
+            </li>
+          </ul>
+        </div>
       </div>
     </header>
 
@@ -417,5 +464,6 @@
         </div>
       </div>
     </footer>
+    <script src="./js/menu.js"></script>
   </body>
 </html>
