--- a/portfolio.html
+++ b/portfolio.html
@@ -159,7 +159,7 @@
               <a href="" class="employees__card-portfolio-link">
                 <img
                   src="./images/projects/notebook.jpg"
-                  class=""
+                  class="employees__card-size"
                   alt="notebook"
                   width="370"
                   height="294"
@@ -181,7 +181,7 @@
               <a href="" class="employees__card-portfolio-link">
                 <img
                   src="./images/projects/basketball.jpg"
-                  class=""
+                  class="employees__card-size"
                   alt="basketball"
                   width="370"
                   height="294"
@@ -205,7 +205,7 @@
               <a href="" class="employees__card-portfolio-link">
                 <img
                   src="./images/projects/seafood.jpg"
-                  class=""
+                  class="employees__card-size"
                   alt="restaurant"
                   width="370"
                   height="294"
@@ -227,7 +227,7 @@
               <a href="" class="employees__card-portfolio-link">
                 <img
                   src="./images/projects/headphones.jpg"
-                  class=""
+                  class="employees__card-size"
                   alt="headphones"
                   width="370"
                   height="294"
@@ -249,7 +249,7 @@
               <a href="" class="employees__card-portfolio-link">
                 <img
                   src="./images/projects/boxes.jpg"
-                  class=""
+                  class="employees__card-size"
                   alt="boxes"
                   width="370"
                   height="294"
@@ -271,7 +271,7 @@
               <a href="" class="employees__card-portfolio-link">
                 <img
                   src="./images/projects/imac.jpg"
-                  class=""
+                  class="employees__card-size"
                   alt="imac"
                   width="370"
                   height="294"
@@ -293,7 +293,7 @@
               <a href="" class="employees__card-portfolio-link">
                 <img
                   src="./images/projects/newspapper.jpg"
-                  class=""
+                  class="employees__card-size"
                   alt="newspapper"
                   width="370"
                   height="294"
@@ -315,7 +315,7 @@
               <a href="" class="employees__card-portfolio-link">
                 <img
                   src="./images/projects/labeltag.jpg"
-                  class=""
+                  class="employees__card-size"
                   alt="labeltag"
                   width="370"
                   height="294"
@@ -337,7 +337,7 @@
               <a href="" class="employees__card-portfolio-link">
                 <img
                   src="./images/projects/typing.jpg"
-                  class=""
+                  class="employees__card-size"
                   alt="typing"
                   width="370"
                   height="294"
