--- a/portfolio.html
+++ b/portfolio.html
@@ -440,7 +440,7 @@
           </ul>
         </div>
         <div>
-          <h2 class="text feedback-footer-text">Підпишіться на розсилку</h2>
+          <h2 class="feedback-footer-text">Підпишіться на розсилку</h2>
           <form class="form-flex">
             <span>
               <input
