--- a/portfolio.html
+++ b/portfolio.html
@@ -154,7 +154,7 @@
             </li>
           </ul>
 
-          <ul class="list employees">
+          <ul class="list employees employees-portfolio ">
             <li class="employees__card-portfolio">
               <a href="" class="employees__card-portfolio-link">
                 <img
