--- a/portfolio.html
+++ b/portfolio.html
@@ -157,13 +157,16 @@
           <ul class="list employees employees-portfolio ">
             <li class="employees__card-portfolio">
               <a href="" class="employees__card-portfolio-link">
+                <picture>
+                 <source media="(min-width: )" srcset="">
                 <img
-                  src="./images/projects/notebook.jpg"
+                  src="./images/projects/12000/laptop.jpg"
                   class="employees__card-size"
                   alt="notebook"
                   width="370"
                   height="294"
                 />
+                </picture>
                 <div class="border-color">
                   <h2 class="portfolio-headers">Технокряк</h2>
                   <p class="headers-veiw">Веб-сайт</p>
@@ -179,13 +182,16 @@
             </li>
             <li class="employees__card-portfolio">
               <a href="" class="employees__card-portfolio-link">
+                <picture>
+                  <source media="(min-width: )" srcset="">
                 <img
-                  src="./images/projects/basketball.jpg"
+                  src="./images/projects/12000/basketball.jpg"
                   class="employees__card-size"
                   alt="basketball"
                   width="370"
                   height="294"
                 />
+                </picture>
                 <div class="border-color">
                   <h2 class="portfolio-headers">
                     Постер New Orlean vs Golden Star
@@ -203,13 +209,16 @@
             </li>
             <li class="employees__card-portfolio">
               <a href="" class="employees__card-portfolio-link">
+                <picture>
+                  <source media="(min-width: )" srcset="">
                 <img
-                  src="./images/projects/seafood.jpg"
+                  src="./images/projects/12000/seafood.jpg"
                   class="employees__card-size"
                   alt="restaurant"
                   width="370"
                   height="294"
                 />
+                </picture>
                 <div class="border-color">
                   <h2 class="portfolio-headers">Ресторан Seafood</h2>
                   <p class="headers-veiw">Додаток</p>
@@ -225,13 +234,16 @@
             </li>
             <li class="employees__card-portfolio">
               <a href="" class="employees__card-portfolio-link">
+                <picture>
+                  <source media="(min-width: )" srcset="">
                 <img
-                  src="./images/projects/headphones.jpg"
+                  src="./images/projects/12000/headphones.jpg"
                   class="employees__card-size"
                   alt="headphones"
                   width="370"
                   height="294"
                 />
+                </picture>
                 <div class="border-color">
                   <h2 class="portfolio-headers">Проєкт Prime</h2>
                   <p class="headers-veiw">Маркетинг</p>
@@ -247,13 +259,16 @@
             </li>
             <li class="employees__card-portfolio">
               <a href="" class="employees__card-portfolio-link">
+                <picture>
+                  <source media="(min-width: )" srcset="">
                 <img
-                  src="./images/projects/boxes.jpg"
+                  src="./images/projects/12000/boxes.jpg"
                   class="employees__card-size"
                   alt="boxes"
                   width="370"
                   height="294"
                 />
+                </picture>
                 <div class="border-color">
                   <h2 class="portfolio-headers">Проєкт Boxes</h2>
                   <p class="headers-veiw">Додаток</p>
@@ -269,13 +284,16 @@
             </li>
             <li class="employees__card-portfolio">
               <a href="" class="employees__card-portfolio-link">
+                <picture>
+                  <source media="(min-width: )" srcset="">
                 <img
-                  src="./images/projects/imac.jpg"
+                  src="./images/projects/12000/screen.jpg"
                   class="employees__card-size"
                   alt="imac"
                   width="370"
                   height="294"
                 />
+                </picture>
                 <div class="border-color">
                   <h2 class="portfolio-headers">Inspiration has no Borders</h2>
                   <p class="headers-veiw">Веб-сайт</p>
@@ -291,13 +309,16 @@
             </li>
             <li class="employees__card-portfolio">
               <a href="" class="employees__card-portfolio-link">
+                <picture>
+                  <source media="(min-width: )" srcset="">
                 <img
-                  src="./images/projects/newspapper.jpg"
+                  src="./images/projects/12000/magazine.jpg"
                   class="employees__card-size"
                   alt="newspapper"
                   width="370"
                   height="294"
                 />
+                </picture>
                 <div class="border-color">
                   <h2 class="portfolio-headers">Видання Limited Edition</h2>
                   <p class="headers-veiw">Дизайн</p>
@@ -313,13 +334,16 @@
             </li>
             <li class="employees__card-portfolio">
               <a href="" class="employees__card-portfolio-link">
+                <picture>
+                  <source media="(min-width: )" srcset="">
                 <img
-                  src="./images/projects/labeltag.jpg"
+                  src="./images/projects/12000/labeltag.jpg"
                   class="employees__card-size"
                   alt="labeltag"
                   width="370"
                   height="294"
                 />
+                </picture>
                 <div class="border-color">
                   <h2 class="portfolio-headers">Проєкт LAB</h2>
                   <p class="headers-veiw">Маркетинг</p>
@@ -335,13 +359,16 @@
             </li>
             <li class="employees__card-portfolio">
               <a href="" class="employees__card-portfolio-link">
+                <picture>
+                  <source media="(min-width: )" srcset="">
                 <img
-                  src="./images/projects/typing.jpg"
+                  src="./images/projects/12000/notebook.jpg"
                   class="employees__card-size"
                   alt="typing"
                   width="370"
                   height="294"
                 />
+                </picture>
                 <div class="border-color">
                   <h2 class="portfolio-headers">Growing Business</h2>
                   <p class="headers-veiw">Додаток</p>
