--- a/index.html
+++ b/index.html
@@ -215,6 +215,8 @@
           <h2 class="main-text-roboto">Чим ми займаємося</h2>
           <ul class="list work-images">
             <li class="work-images__example">
+              <picture>
+                <source>
               <img
                 src="images/work/type.jpg"
                 class="work-images__example-pictures"
@@ -222,9 +224,12 @@
                 width="370"
                 height="294"
               />
+              </picture>
               <div class="our-job text">Десктопні додатки</div>
             </li>
             <li class="work-images__example">
+              <picture>
+                <source>
               <img
                 src="images/work/telefone.jpg"
                 class="work-images__example-pictures"
@@ -232,9 +237,12 @@
                 width="370"
                 height="294"
               />
+              </picture>
               <div class="our-job text">Мобільні додатки</div>
             </li>
             <li class="work-images__example">
+              <picture>
+                <source>
               <img
                 src="images/work/ipad.jpg"
                 class="work-images__example-pictures"
@@ -242,6 +250,7 @@
                 width="370"
                 height="294"
               />
+              </picture>
               <div class="our-job text">Дизайнерські рішення</div>
             </li>
           </ul>
@@ -252,6 +261,8 @@
           <h2 class="main-text-roboto">Наша команда</h2>
           <ul class="list employees">
             <li class="employees__card">
+              <picture>
+                <source>
               <img
                 src="images/team/igor.jpg"
                 class="employees__card-pictures"
@@ -259,6 +270,7 @@
                 width="270"
                 height="260"
               />
+              </picture>
               <div class="names-jobs-style">
                 <h3 class="names">Ігор Дем'яненко</h3>
                 <p class="jobs">Product Designer</p>
@@ -311,6 +323,8 @@
               </div>
             </li>
             <li class="employees__card">
+              <picture>
+                <source>
               <img
               class="employees__card-pictures"
                 src="images/team/repinaolga.jpg"
@@ -319,6 +333,7 @@
                 width="270"
                 height="260"
               />
+              </picture>
               <div class="names-jobs-style">
                 <h3 class="names">Ольга Рєпіна</h3>
                 <p class="jobs">Frontend Developer</p>
@@ -371,6 +386,8 @@
               </div>
             </li>
             <li class="employees__card">
+              <picture>
+                <source>
               <img
               class="employees__card-pictures"
                 src="images/team/mikola.jpg"
@@ -379,6 +396,7 @@
                 width="270"
                 height="260"
               />
+              </picture>
               <div class="names-jobs-style">
                 <h3 class="names">Микола Тарасов</h3>
                 <p class="jobs">Marketing</p>
@@ -431,6 +449,8 @@
               </div>
             </li>
             <li class="employees__card">
+              <picture>
+                <source>
               <img
               class="employees__card-pictures"
                 src="images/team/michael.jpg"
@@ -439,6 +459,7 @@
                 width="270"
                 height="260"
               />
+              </picture>
               <div class="names-jobs-style">
                 <h3 class="names">Михайло Єрмаков</h3>
                 <p class="jobs">UI Designer</p>
