--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
           <ul class="list work-images">
             <li class="work-images__example">
               <picture>
-                <source>
+                <source media="(max-width: 767px)" srcset="" type="image.jpg">
               <img
                 src="images/work/type.jpg"
                 class="work-images__example-pictures"
@@ -262,7 +262,8 @@
           <ul class="list employees">
             <li class="employees__card">
               <picture>
-                <source>
+                <!-- mobile version -->
+                <source media="(max-width: 767px)" srcset="" type="image.jpg">
               <img
                 src="images/team/igor.jpg"
                 class="employees__card-pictures"
